# routine-workflow

./: .autoheader_cache  .coverage  CHANGELOG.md  README.md  ROADMAP.md  full_routine_workflow.py  pyproject.toml  test.sha256
.github/workflows/: publish.yml
src/routine_workflow/: __init__.py  banner.py  cli.py  cli.py.bak  config.py  config.py.bak  lock.py  runner.py  utils.py
src/routine_workflow/steps/: __init__.py  step1.py.bak  step2.py  step2_5.py  step3.py  step4.py  step5.py  step5.py.bak  step6.py
tests/: conftest.py  conftest.py.bak  test_cli.py  test_config.py  test_config.py.bak  test_errors.py  test_lock.py  test_precommit.py  test_runner.py  test_runner.py.bak  test_utils.py
tests/test_steps/: test_step1.py.bak  test_step2.py  test_step2_5.py  test_step3.py  test_step3_5.py  test_step4.py  test_step5.py  test_step5.py.bak  test_step6.py  test_step6_5.py
