[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "routine-workflow"
version = "3.2.0"
description = "Automated routine workflow runner for repository hygiene, backups, and dumps orchestration."
readme = "README.md"
license = { text = "MIT" }
authors = [
  { name = "Dhruv", email = "contact@dhruv.dev" }
]
requires-python = ">=3.9"
dependencies = [
  "argparse; python_version<'3.10'",
  "pytest>=8.0.0",
  "coverage[toml]>=7.5.0",
  "typing-extensions>=4.0"
]

[project.optional-dependencies]
dev = [
  "black>=24.0",
  "flake8>=7.0",
  "pytest-cov>=5.0",
  "mypy>=1.10",
  "twine>=5.0",
  "build>=1.2.1"
]

[project.urls]
Homepage = "https://github.com/dhruv13x/routine-workflow"
Repository = "https://github.com/dhruv13x/routine-workflow"
Issues = "https://github.com/dhruv13x/routine-workflow/issues"
Documentation = "https://pypi.org/project/routine-workflow"

[project.scripts]
routine-workflow = "routine_workflow.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/routine_workflow"]

[tool.hatch.build.targets.sdist]
include = ["src", "tests", "README.md", "LICENSE", "pyproject.toml"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=src/routine_workflow --cov-report=term-missing --cov-fail-under=85 -q"

[tool.coverage.run]
branch = true
source = ["src/routine_workflow"]

[tool.coverage.report]
show_missing = true
skip_covered = true